# SeeStar-AI

./: .gitignore  AUTHORS  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  pyproject.toml
.claude/: settings.json
.claude/agents/: mcp.md  refine.md  skills.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
deploy/: seestar-mcp.service
deploy/docker/: .env.docker.example  Dockerfile.mcp  Dockerfile.mcp.dockerignore  README-docker.md  config.toml.example  docker-compose.yml
docs/: 2026-07-05-production-oss-readiness-review.md  2026-07-06-fan-artifact-research.md  2026-07-12-live-session-fixes.md  seestar-s50-specs.md
docs/superpowers/plans/: 2026-07-05-autonomous-night-phase3.md  2026-07-05-image-refinement.md  2026-07-05-learned-horizon-mask-featureA.md  2026-07-05-live-operator-projects-phase2.md  (+3 more)
skills/anomaly-playbook/: SKILL.md
skills/astro-processing/: SKILL.md
skills/autonomous-night/: SKILL.md
skills/image-refinement/: SKILL.md
skills/observing-planner/: SKILL.md
skills/qa-policy/: SKILL.md
skills/run-session/: SKILL.md
src/seestar_mcp/: __init__.py  alpaca_client.py  config.py  data_client.py  provenance.py  qa_tier1.py  qa_tier2.py  secrets.py  server.py
src/seestar_refine/: __init__.py  backends.py  color.py  config.py  crop.py  deconv.py  denoise.py  dss.py  gradient.py  handoff.py  keeplist.py  models.py  preview.py  pystack.py  server.py  upscale.py  wbpp.py
tests/: test_alpaca_client.py  test_config.py  test_data_client.py  test_planning_astro.py  test_planning_autonomous.py  test_planning_catalog.py  test_planning_lightpollution.py  test_planning_obstructions.py  test_planning_projects.py  test_planning_ranker.py  test_planning_site.py  test_planning_tools.py  test_planning_weather.py  test_provenance.py  test_qa_tier1.py  test_qa_tier2.py  test_refine_backends.py  test_refine_color.py  test_refine_config.py  test_refine_crop.py  test_refine_deconv.py  test_refine_denoise.py  test_refine_dss.py  test_refine_gradient.py  test_refine_handoff.py  test_refine_keeplist.py  test_refine_preview.py  test_refine_pystack.py  test_refine_server.py  test_refine_upscale.py  test_refine_wbpp.py  test_secrets.py  test_server.py  test_smoke_session.py
tests/fixtures/: bad_ecc.fits  bad_snr.fits  good.fits  hazy.fits  make_fixtures.py
(+21 files in other folders)
