[project]
name = "seestar-mcp"
version = "0.1.0"
description = "Auditable MCP server + Claude Code Skills to control a ZWO Seestar S50 and QA its output"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Joshua Gillmore", email = "joshuagillmore@gmail.com" }]
keywords = [
  "astronomy",
  "astrophotography",
  "telescope",
  "seestar",
  "mcp",
  "fits",
  "claude",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
  "mcp[cli]==1.28.1",
  "httpx==0.28.1",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.2",
  "numpy==2.2.6",
  "astropy==7.2.1",
  "photutils==2.3.0",
  "ccdproc==2.5.1",
  "smbprotocol==1.16.1",
  "pillow==12.3.0",
]

[project.urls]
Homepage = "https://github.com/OrangeAgente/SeeStar-AI"
Repository = "https://github.com/OrangeAgente/SeeStar-AI"
Issues = "https://github.com/OrangeAgente/SeeStar-AI/issues"

[dependency-groups]
dev = [
  "pytest==8.4.2",
  "pytest-asyncio==1.4.0",
  "respx==0.22.0",
  "ruff==0.13.3",
  "cyclonedx-bom==7.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/seestar_mcp", "src/seestar_refine"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
